--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/Config/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +20,9 @@
     "express-validator": "^7.3.0",
     "mariadb": "^3.4.5",
     "multer": "^2.0.2",
+    "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
