--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DATABASENAME=proyecto
 DATABASEUSER=root
-DATABASEPASSWORD=admin
+DATABASEPASSWORD=
 DATABASEHOST=localhost
 DATABASEPORT=3306
 PORT=3000
